# PIDTemplates

./: .gitignore  .gitmodules  CMakeLists.txt  PIDTemplatesConfig.cmake  README.md
include/: linear_fit.h  linear_fit.hpp
include/PIDTemplates/: PFilter.h  PIFilter.h  p_filter.hpp  pi_filter.hpp
include/PIDTemplates/models/: DelayIntegratorPlantModel.h  FitDelayIntegratorPlantModel.h
python/: Anti-windup Temperature Analysis.ipynb  DelayIntegratorPlantModel.py  PIFilter.py  delay_integrator_model.py
python/tests/: tests.py
tests/: .gitignore  CMakeLists.txt
tests/source/: .cproject  .project  PIDTemplates  bump_test.cpp  cnl  linear_fit.h  linear_fit.hpp  test_IIR_PFilter.cpp  test_IIR_PIFilter.cpp  test_PIDelayIntegratorControl.cpp  test_bump_test.cpp  test_bump_test_fixed_point.cpp  test_fit_delay_integrator.cpp  test_gsl_linear_fit.cpp  test_gsl_linear_fit_evenly_spaced.cpp  test_linear_fit.cpp  test_linear_fit_evenly_spaced.cpp  test_models_DelayIntegrator.cpp  test_tools.cpp
